[gd_scene load_steps=3 format=3 uid="uid://dvgnnwo514nnt"]

[ext_resource type="Script" path="res://prog_82a.gd" id="1_fu0t2"]
[ext_resource type="Theme" uid="uid://duan326d8yya2" path="res://big_font.tres" id="2_5herr"]

[node name="prog82a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu0t2")

[node name="lblspdlmt" type="Label" parent="."]
layout_mode = 0
offset_right = 311.0
offset_bottom = 132.0
theme = ExtResource("2_5herr")
text = "speed limit"

[node name="lblvespd" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 145.0
offset_right = 334.0
offset_bottom = 230.0
theme = ExtResource("2_5herr")
text = "vehical speed"

[node name="lblfine" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 411.0
offset_right = 332.0
offset_bottom = 496.0
theme = ExtResource("2_5herr")
text = "fine:"

[node name="lblmoney" type="Label" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 413.0
offset_right = 422.0
offset_bottom = 498.0
theme = ExtResource("2_5herr")
text = "$"

[node name="txtlimit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 278.0
offset_top = -2.0
offset_right = 473.0
offset_bottom = 60.0

[node name="txtspeed" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 335.0
offset_top = 136.0
offset_right = 530.0
offset_bottom = 198.0

[node name="btncalc" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 497.0
offset_right = 201.0
offset_bottom = 648.0
theme = ExtResource("2_5herr")
text = "calculate"

[node name="btnclear" type="Button" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 502.0
offset_right = 596.0
offset_bottom = 653.0
theme = ExtResource("2_5herr")
text = "clear"

[node name="btnexit" type="Button" parent="."]
layout_mode = 0
offset_left = 956.0
offset_top = 497.0
offset_right = 1150.0
offset_bottom = 648.0
theme = ExtResource("2_5herr")
text = "exit"

[connection signal="pressed" from="btncalc" to="." method="_on_button_pressed"]
[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_button_3_pressed"]
